change examples project to not use gradle jetty but instead make a distribution containing both mapfish-print and geoserver.
This will be part of the downloads examples:test will run the jetty distribution and run its tests against it to verify that the distribution works correctly.

There is a buildZip task which creates a zip archive with the full application.